<resources>
    <string name="app_name">Practica3</string>
    <!-- Strings from presentation -->

    <!-- Strings from welcome view -->
    <string name="welcome_text">Welcome to the Portales!</string>
    <string name="welcome_description">Taqueria Los Portales is a quick, casual restaurant.</string>
    <string name="button_start">Get started!</string>
    <!-- Strings from sign in view -->
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept the terms and conditions of the Portales</string>
    <string name="sign_in">Sign in</string>
    <!-- Strings from menu view -->
    <string name="our_menu">Our menu</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="combinaciones">Combinaciones</string>
    <string name="sopas">Sopas</string>
    <string name="tortas">Tortas</string>
    <string name="drinks">Bebidas</string>
</resources>