<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/button_combinaciones"
        android:layout_width="158dp"
        android:layout_height="71dp"
        android:layout_columnWeight="1"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/combinaciones"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_buttons_text"
        app:layout_constraintBottom_toTopOf="@+id/button_sopas"
        app:layout_constraintEnd_toStartOf="@+id/button_tortas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_antojitos" />

    <Button
        android:id="@+id/button_tortas"
        android:layout_width="158dp"
        android:layout_height="71dp"
        android:layout_columnWeight="1"
        android:layout_marginEnd="50dp"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/tortas"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_buttons_text"
        app:layout_constraintBottom_toTopOf="@+id/button_bebidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_combinaciones"
        app:layout_constraintTop_toBottomOf="@+id/button_especialidades" />

    <Button
        android:id="@+id/button_sopas"
        android:layout_width="158dp"
        android:layout_height="71dp"
        android:layout_columnWeight="1"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/sopas"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_buttons_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_bebidas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_combinaciones" />

    <Button
        android:id="@+id/button_bebidas"
        android:layout_width="158dp"
        android:layout_height="71dp"
        android:layout_columnWeight="1"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/drinks"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_buttons_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_sopas"
        app:layout_constraintTop_toBottomOf="@+id/button_tortas" />

    <Button
        android:id="@+id/button_especialidades"
        android:layout_width="158dp"
        android:layout_height="71dp"
        android:layout_columnWeight="1"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/especialidades"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_buttons_text"
        app:layout_constraintBottom_toTopOf="@+id/button_tortas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_antojitos"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:src="@drawable/grupo2"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_especialidades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/button_antojitos"
        android:layout_width="158dp"
        android:layout_height="71dp"
        android:layout_columnWeight="1"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:text="@string/antojitos"
        android:textColor="@color/white"
        android:textSize="@dimen/menu_buttons_text"
        app:layout_constraintBottom_toTopOf="@+id/button_combinaciones"
        app:layout_constraintEnd_toStartOf="@+id/button_especialidades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>